<resources>
    <string name="app_name">SimpleForecast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="control_city">管理城市</string>

    <string name="feel_temp">体感温度：</string>
    <string name="air_aqi">空气质量指数：</string>
    <string name="air_qlty">空气质量：</string>
    <string name="pop">降水概率：</string>
    <string name="hum">湿度：</string>
    <string name="wind">风力状况：</string>
    <string name="vis">能见度：</string>
    <string name="sure_update">立即更新</string>
    <string name="cancel_update">暂不更新</string>
    <string name="sure">确定</string>
    <string name="app_introduce">一款很普通的天气软件</string>
    <string name="develop_by">Develop By : mengming</string>
    <string name="app_version">当前版本：</string>
    <string name="cancel">取消</string>
</resources>
