<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:background="@drawable/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phelps.simpleforecast.Activity.AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_introduce"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_about_version"
            android:text="@string/app_version"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/develop_by"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


</RelativeLayout>
